--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
             <version>2.17.1</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itext7-core</artifactId>
+            <version>7.1.15</version>
+        </dependency>
+
     </dependencies>
 
 </project>
